# CLIcomunicator

./: .gitignore  Cargo.toml  README.md  setup.ps1  setup.sh
.github/workflows/: rust.yml
scripts/: Register-McpClients.ps1  Register-McpClients.sh
src/: main.rs
